test cases added SharedGalleryViewModelTest.kt GalleryRepositoryImplTest.kt