@@ -34,8 +34,10 @@ android {
     }
 
     testOptions {
-        unitTests.all {
-            it.jvmArgs("-Djdk.attach.allowAttachSelf=true")
+        packagingOptions {
+            jniLibs {
+                useLegacyPackaging = true
+            }
         }
     }
 
@@ -86,10 +88,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     //androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // Additional testing libraries
-    //androidTestImplementation 'org.mockito:mockito-core:4.8.0'
-    //androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    //Additional testing libraries
+    androidTestImplementation 'org.mockito:mockito-core:4.8.0'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
 
-    //testImplementation "io.mockk:mockk:1.13.3"
+    testImplementation "io.mockk:mockk:1.13.3"
     androidTestImplementation 'io.mockk:mockk-android:1.13.3'
+
+
+    // Test dependencies
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:4.8.0' // Mocking library
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0' // For Kotlin-specific mockito functions
+    testImplementation 'androidx.arch.core:core-testing:2.1.0' // For LiveData and Flow testing
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0' // For testing coroutines
+
 }
